--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,9 @@
 --- #YAML:1.0
 name:                Bot-Pastebot
-version:             0.51
+version:             0.52
 abstract:            The original clipboard-to-chat gateway.
-license:             unknown
-generated_by:        ExtUtils::MakeMaker version 6.30_01
-author:              Rocco Caputo <rcaputo@cpan.org>
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
 distribution_type:   module
 requires:     
     File::ShareDir:                0.05
@@ -16,5 +15,7 @@ requires:
     Test::More:                    0.63
     Text::Template:                1.44
 meta-spec:
-    url: <http://module-build.sourceforge.net/META-spec-new.html>;
-    version: 1.1
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Rocco Caputo <rcaputo@cpan.org>
