--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,32 @@
 --- #YAML:1.0
-name:                Bot-Pastebot
-version:             0.53
-abstract:            The original clipboard-to-chat gateway.
-license:             ~
-author:              
+name:               Bot-Pastebot
+version:            0.540
+abstract:           The original clipboard-to-chat gateway.
+author:
     - Rocco Caputo <rcaputo@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    File::ShareDir:                0.05
-    HTTP::Request:                 1.4
-    HTTP::Response:                1.53
-    Perl::Tidy:                    1.46
-    POE:                           0.38
-    POE::Component::IRC:           5.03
-    Test::More:                    0.63
-    Text::Template:                1.44
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    File::ShareDir:       0.05
+    HTTP::Request:        1.4
+    HTTP::Response:       1.53
+    Perl::Tidy:           1.46
+    POE:                  1.007
+    POE::Component::IRC:  5.03
+    Test::More:           0.63
+    Text::Template:       1.44
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  http://github.com/~rcaputo/bot-pastebot
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
