--- a/META.yml
+++ b/META.yml
@@ -1,32 +1,32 @@
---- #YAML:1.0
-name:               Bot-Pastebot
-version:            0.541
-abstract:           The original clipboard-to-chat gateway.
+---
+abstract: 'The original clipboard-to-chat gateway.'
 author:
-    - Rocco Caputo <rcaputo@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Rocco Caputo <rcaputo@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    File::ShareDir:       0.05
-    HTTP::Request:        1.4
-    HTTP::Response:       1.53
-    Perl::Tidy:           1.46
-    POE:                  1.007
-    POE::Component::IRC:  5.03
-    Test::More:           0.63
-    Text::Template:       1.44
-resources:
-    license:     http://dev.perl.org/licenses/
-    repository:  http://github.com/~rcaputo/bot-pastebot
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Bot-Pastebot
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  File::ShareDir: 0.05
+  HTTP::Request: 1.4
+  HTTP::Response: 1.53
+  POE: 1.007
+  POE::Component::IRC: 5.03
+  Perl::Tidy: 1.46
+  Test::More: 0.63
+  Text::Template: 1.44
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/~rcaputo/bot-pastebot
+version: 0.542
