Import of RCAPUTO/Bot-Pastebot-0.543 from CPAN.
gitpan-cpan-distribution: Bot-Pastebot
gitpan-cpan-version:      0.543
gitpan-cpan-path:         RCAPUTO/Bot-Pastebot-0.543.tar.gz
gitpan-cpan-author:       RCAPUTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,7 @@ no_index:
     - inc
 requires:
   File::ShareDir: 0.05
+  HTTP::Negotiate: 6
   HTTP::Request: 1.4
   HTTP::Response: 1.53
   POE: 1.007
@@ -29,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/~rcaputo/bot-pastebot
-version: 0.542
+version: 0.543
